# algorithmic-exercises

./: .bash_init  .gitignore  .gitmodules  .rspec  .travis.sh  .travis.yml  LICENSE.md  README.md  build.sh  codility.gemspec
bash/: build_cpp.sh  build_ruby.sh  build_setup.sh  export_root.sh  libutil.sh
cpp/: CMakeLists.txt  main.cpp
cpp/equillibrium/: CMakeLists.txt  main.cpp
cpp/equillibrium/src/: CMakeLists.txt  Finder.cpp  Finder.h
cpp/equillibrium/test/: CMakeLists.txt
cpp/equillibrium/test/src/: CMakeLists.txt  finder_test.cpp  helpers.h
cpp/min-abs-sum/: README.md
cpp/src/: CMakeLists.txt  main.cpp  malloc.h
cpp/src/equilibrium/: CMakeLists.txt  Equilibrium.cpp  Equilibrium.h  equilibrium.cpp  equlibrium.cc  equlibrium.h
cpp/src/morse/: CMakeLists.txt  Morse.cpp  Morse.h  morse.cpp
cpp/test/: CMakeLists.txt
cpp/test/src/equilibrium/: CMakeLists.txt  equilibriumTest.cpp  equilibrium_test.cc  equilibrium_test.cpp
cpp/test/src/morse/: CMakeLists.txt  morseTest.cpp  morse_test.cc
lib/: codility.rb
lib/codility/: equilibrium_finder.rb
ruby/: Gemfile  interview-ruby.gemspec
ruby/config/: Guardfile
ruby/lib/interview/: ruby.rb
ruby/lib/interview/ruby/: binarygap.rb  equilibrium.rb  morse.rb  version.rb
ruby/lib/interview/ruby/binarygap/: loop_state.rb
ruby/lib/interview/ruby/equilibrium/: finder.rb  finder_fast.rb  finder_slow.rb
ruby/lib/path/: grid.rb
ruby/spec/: spec_helper.rb
ruby/spec/interview/: ruby_spec.rb
ruby/spec/interview/ruby/: binarygap_spec.rb  morse_spec.rb
ruby/spec/interview/ruby/equilibrium/: finder_fast_spec.rb  finder_slow_spec.rb  shared_examples.rb
ruby/spec/interview/ruby/toptal/: questions_spec.rb
ruby/spec/path/: grid_spec.rb
spec/: codility_spec.rb  spec_helper.rb
spec/codility/: equilibrium_finder_spec.rb
